--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,16 @@
 {
   "name": "Zangetsu",
-  "homepage": "https://github.com/lankz/zangetsu",
+  "homepage": "http://github.com/lankz/zangetsu",
   "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "vendor/assets/components",
-    "test",
-    "tests"
+    "bower_components"
   ],
   "dependencies": {
     "bootstrap-sass": "~3.3",
     "fontawesome": "~4.3",
-    "modernizr": "~2.8.3",
-    "respond": "~1.4.2"
+    "modernizr": "~2.8",
+    "respond": "~1.4"
   }
 }
