--- a/config/database/docker.example.yml
+++ b/config/database/docker.example.yml
@@ -17,7 +17,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: zangetsu_development
+  database: gunzel_development
   pool: 5
   username: postgres
   password:
@@ -47,7 +47,7 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: zangetsu_test
+  database: gunzel_test
   pool: 5
   username: postgres
   password:
@@ -56,7 +56,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: zangetsu_production
+  database: gunzel_production
   pool: 5
   username: postgres
   password:
